--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ description: ""
 baseurl: ""
 
 # The base hostname & protocol of your site for where absolute urls are needed.
-url: "https://scriptor-jekyll.netlify.com"
+url: "https://hanboy612.com"
 
 # Favicon
 favicon: images/favicon.png
