--- a/_config.yml
+++ b/_config.yml
@@ -31,11 +31,11 @@ navigation:
   - text: home
     url: /
   - text: photos
-    url: /photos/
+    url: /photos
   - text: stories
-    url: /stories/
+    url: /stories
   - text: about
-    url: /about/
+    url: /about
 
 # The shortname for your Disqus site to enable comments.
 disqus: ""
