--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ navigation:
     url: /about/
 
 # The shortname for your Disqus site to enable comments.
-disqus: ""
+disqus: hanboy612
 
 # Colors
 accent_color: '#2d72d9'
