add link to portfolio

--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,10 @@ google_analytics: "G-8CLL41WEPG"
 navigation:
   - text: home
     url: /
-  # - text: photos
-  #   url: /photos/
   - text: stories
     url: /stories/
+  - text: portfolio
+    url: https://portfolio.hanboy612.com
   - text: about
     url: /about/
 
